compiler/testData/diagnostics/tests/script/AccessForwardDeclarationInScript.kts
// FIR_IDENTICAL

val x = <!UNINITIALIZED_VARIABLE!>y<!>

val y = 2
